Fix overflow

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/entity/view/res/dataclient.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/entity/view/res/dataclient.css
@@ -563,6 +563,7 @@ a.tab-caption-3,
   padding-top: 3px;
   padding-bottom: 2px;
   min-width: 180px;
+  overflow-x: scroll;
 }
 
 table.flat-search .selectx {
